--- a/build.gradle
+++ b/build.gradle
@@ -15,9 +15,9 @@ repositories {
 dependencies {
  
 	compile 'ch.qos.logback:logback-classic:1.1.3'
-	compile 'org.springframework:spring-webmvc:4.1.6.RELEASE'
+	compile 'org.springframework:spring-webmvc:5.0.0.RELEASE'
 	compile 'javax.servlet:jstl:1.2'
-	
+	compile 'org.springframework.data:spring-data-mongodb:2.0.1.RELEASE'
 }
 
 // Embeded Jetty for testing
