--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,16 @@ repositories {
 
 dependencies {
  
-	compile 'ch.qos.logback:logback-classic:1.1.3'
-	compile 'org.springframework:spring-webmvc:5.0.0.RELEASE'
-	compile 'org.springframework:spring-core:5.0.0.RELEASE'
-	compile 'org.springframework:spring-context:5.0.0.RELEASE'
-	compile 'javax.servlet:jstl:1.2'
-	compile 'org.mongodb:mongo-java-driver:2.11.0'
-	compile 'org.springframework.data:spring-data-mongodb:2.0.1.RELEASE'
+	compile 'ch.qos.logback:logback-classic:1.1.3',
+			'org.springframework:spring-webmvc:5.0.0.RELEASE',
+			'org.springframework:spring-core:5.0.0.RELEASE',
+			'org.springframework:spring-context:5.0.0.RELEASE',
+			'javax.servlet:jstl:1.2',
+			'org.mongodb:mongo-java-driver:2.11.0',
+			'org.springframework.data:spring-data-mongodb:2.0.1.RELEASE',
+			'org.apache.tiles:tiles-core:3.0.8',
+			'org.apache.tiles:tiles-template:3.0.8',
+			'org.apache.tiles:tiles-jsp:3.0.8'
 }
 
 // Embeded Jetty for testing
